# KernelProcessingImage

./: BaseImage.h  BasePixel.h  CMakeLists.txt  Image.h  ImageFileHandler.cpp  ImageFileHandler.h  ImageReaderWriter.h  KernelImageProcessing.cpp  KernelImageProcessing.h  Pixel.h  main.cpp
test/: CMakeLists.txt  ImageFileHandlerTest.cpp  ImageFixture.cpp  ImageReaderTest.cpp  ImageReaderWriterTest.cpp  ImageTest.cpp  KIPTest.cpp  PixelFixture.cpp  runAllTests.cpp
